# Pico-SD--IDE-interface--for-Rc2014

./: CMakeLists.txt  CPM File format.md  README.md  SerialCMPtools.md  backup2orac  base64endecode.c  config.h  cpmcp.c  cpmfs.c  cpmls.c  hw_config.c  ide.c  serialfile.c  z80disk.c  z80disk.uf2  z80disk_uart.uf2  z80io.pio
BASIC/: README.md  Read IDE Ident  idetest.bas
Circuit/: READ.md
ID reader/: IDreader.py
ID-File-Structure/: IdReader.py  id-reader.py  id-writer.py  readme.md
ROM WBW SD/: RC2014.ini  READ.ME  README.md  RomWBWIDE.id  diskdefs
ROm WBW SD/: RC2014.ini
RomWBW Usage/: README.md
SD Card Contents/: README.md
SD Card Contents for RomWBW/: README.md
